--- a/Projeto 1 Individual/style.css
+++ b/Projeto 1 Individual/style.css
@@ -1,42 +1,44 @@
 body {
-    background-image: url(background.png);
-    background-attachment: fixed;
+   background-color: #011627;
 }
 /*HEADER ---------------------*/
-/*header {
+header {
     background-color: #011627;
     height: 90px;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding-left: 10%;
 }
-h1 {
-    color: #fea837;
-    font-family: 'Nova Mono', monospace;
-    font-weight: bolder;
-    font-size: 55px;
+nav {
     width: 70%;
-}*/
-
-/*nav {display: flex;
-    width: 100%;
+    display: flex;
+    flex-direction: row;
     justify-content: space-around;
-    align-items: center;
-    }
+}
 a {
-    color: #fea837;
+    font-size: 30px;
+    color: #fdfffc;
+    opacity: 50%;
     text-decoration: none;
-    font-size: 20px;
-}*/
+}
+a:hover {
+    opacity: 100%;
+}
 /*MAIN ---------------------*/
 main {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    flex-wrap: nowrap;
 }
 /*primeira seção --------------------*/
+.sec-one {
+    height: 90vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
 h2 {
     font-family: 'Nova Mono', monospace;
     font-size: 60px;
@@ -46,53 +48,15 @@ p {
     font-size: 30px;
     color: #fdfffc;
 }
-nav {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    gap: 50px;
-    padding-top: 30%;
-}
-a {
-    font-family: 'Nova Mono', monospace;
-    font-size: 50px;
-    color: #fdfffc;
-    opacity: 50%;
-    text-decoration: none;
-}
 .first-div {
     padding-top: 15%;
     padding-left: 20px;
     width: 40%;
 }
-.first {
-    background-color: #011627;
-    width: 80vw;
-    height: 80vh;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: stretch;
-    border-radius: 40px;
-    margin-top: 10vh;
-}
-.two {
-    width: 80vw;
-    height: 80vh;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: stretch;
-    margin-top: 10vh;
-    backdrop-filter: blur(20px);
-    border: 2px solid #fdfffc;
-    box-shadow: 6px black;
-    border-radius: 40px;
-}
 .foto {width: 100%;
 height: 100%;}
 
-a:hover {
-    opacity: 100%;
+/*segunda seção --------------------*/
+.sec-two {background-color: #352f4c;
+    height: 50vh;
 }
