--- a/Projeto 1 Individual/style.css
+++ b/Projeto 1 Individual/style.css
@@ -1,19 +1,32 @@
 body {
    background-color: #011627;
 }
+html {
+    scroll-behavior: smooth;
+}
+
 /*HEADER ---------------------*/
 header {
-    background-color: #011627;
-    height: 90px;
+    position: fixed;
+  /*  background-color: #011627;*/
+    backdrop-filter: blur(10px);
+    width: 100%;
+    height: 10vh;
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
+h1 {
+    font-family: 'Nova Mono', monospace;
+    font-size: 40px;
+    color: #fea837;
+}
 nav {
-    width: 70%;
+    width: 30%;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    flex-wrap: wrap;
 }
 a {
     font-size: 30px;
@@ -26,16 +39,21 @@ a:hover {
     opacity: 100%;
     transition: opacity 0.5s;
 }
+a:active {
+    color: #fea837;
+    transition: color 0.1s;
+    text-shadow: 0 0 5px #fea837;
+}
 /*MAIN ---------------------*/
 main {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    flex-wrap: nowrap;
 }
 /*primeira seção --------------------*/
 .sec-one {
+    margin-top: 10vh;
     height: 90vh;
     display: flex;
     flex-direction: row;
@@ -59,17 +77,18 @@ p {
 height: 100%;}
 
 /*segunda seção --------------------*/
-.sec-two {background-color: #352f4c;
+.sec-two {background-image: url(about.png);
+    background-size: cover;
     width: 100vw;
     height: 100vh;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    flex-wrap: nowrap;
 }
 .sec-two > div {
     width: 50vw;
+    text-align: center;
 }
 h3 {
     font-family: 'Nova Mono', monospace;
@@ -85,7 +104,10 @@ h3 {
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-    flex-wrap: nowrap;
+}
+.sec-three > div {
+    width: 50vw;
+    text-align: center;
 }
 .inter {background-image: url(background.png);
     background-size: cover;
@@ -96,7 +118,7 @@ h3 {
     align-items: center;
 }
 ul {
-    font-size: 25px;
+    font-size: 35px;
     color: #fdfffc;
     list-style: none;
 }
@@ -128,8 +150,21 @@ fieldset {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding-top: 15%;
 }
+.botao {
+    width: 15%;
+    background-color: #fea837
+    font-size 20px;
+    color: #011627;
+}
+/*footer ---------------*/
 footer {
     height: 10vh;
     width: 100vw;
+    text-align: center;
+}
+.meio {
+    width: 70%;
+    text-align: center;
 }
